--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,24 +1,21 @@
-/* .App {
-  text-align: center;
-}
-
-.App p {
-  width: 75%;
-  margin: auto;
-  overflow-wrap: break-word;
-  padding: 20px 0;
-} */
-
 .App {
   text-align: center;
-  padding: 0 200px;
 }
 
 .App p {
+  width: 800px;
   margin: auto;
   overflow-wrap: break-word;
   text-align: left;
   margin-bottom: 50px;
+}
+
+.heading-container {
+  margin: 30px auto;
+  width: 800px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .heading {
@@ -26,30 +23,29 @@
   /* font-family: "Montserrat", sans-serif; */
   font-weight: 700;
   font-size: 30px;
+  margin: 0;
 }
 
 .searchbar {
-  background-color: rgba(99, 32, 238, 0.3);
+  background-color: rgba(176, 176, 176, 0.3);
   padding: 10px 20px;
-  border-radius: 20px;
+  border-radius: 5px;
+  border: solid 1px rgba(176, 176, 176, 0.3);
   display: inline-block;
-  margin-bottom: 30px;
-  border: solid 1px rgba(99, 32, 238, 0.3);
 }
 
 .searchbar:focus-within {
   border: solid 1px #6320ee;
 }
 
-
 .input {
   border: none;
   outline: none;
   font-size: 20px;
-  color: #fff;
+  color: #000;
   background: transparent;
 }
 
 .input::placeholder {
-  color: #fff;
+  color: #000;
 }
